<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  android:orientation="vertical">

  <TextView
    android:id="@+id/existingAccountsTitle"
    style="@style/layoutTitle"
    android:text="@string/existing_accounts" />

  <TextView
    android:id="@+id/accountListTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/existingAccountsTitle"
    android:fontFamily="sans-serif-condensed-medium"
    android:padding="10dp"
    android:text="@string/chooseAnAccount"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

  <ListView
    android:id="@+id/lstExistingAccts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/accountListTitle"
    android:layout_above="@id/btnLoadAcct"/>

  <Button
    android:id="@+id/btnLoadAcct"
    style="@style/buttonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/select"
    android:layout_alignParentBottom="true"
    android:layout_margin="0dp" />


</RelativeLayout>