<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-condensed-medium"
    android:padding="20sp"
    android:text="@string/customerSelectDeactivate"
    android:textSize="25sp" />

  <TextView
    android:id="@android:id/empty"
    android:layout_marginTop="75sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30sp"
    android:text="@string/customerNoAccounts"
    android:textSize="20sp"/>

  <ListView
    android:id="@android:id/list"
    android:layout_marginTop="50sp"
    android:layout_width="fill_parent"
    android:layout_height="450sp"
    android:divider="@color/colorAccent"
    android:dividerHeight="1dp"
    android:listSelector="@color/colorAccent"/>


  <Button
    android:id="@+id/btnLoadAcct"
    style="@style/buttonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_margin="0dp"
    android:text="@string/submit" />





</RelativeLayout>