<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  android:orientation="vertical">

  <TextView
    android:id="@+id/textTitle"
    style="@style/layoutTitle"
    android:text="@string/promoteEmployee" />

  <TextView
    android:id="@+id/listTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textTitle"
    android:layout_alignParentEnd="false"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:padding="10dp"
    android:text="@string/promoteSelect"
    android:textColor="@color/colorPrimary"
    android:textSize="24sp" />

  <ListView
    android:id="@+id/employeeList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/promoteButton"
    android:layout_below="@id/listTitle"
    android:divider="@color/colorAccent"
    android:dividerHeight="1dp"
    android:listSelector="@color/colorAccent" />

  <Button
    android:id="@+id/promoteButton"
    style="@style/buttonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_margin="0dp"
    android:text="@string/promoteConfirm" />

</RelativeLayout>