<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  android:orientation="vertical">

  <TextView
    android:id="@+id/titleAccount"
    style="@style/layoutTitle"
    android:text="@string/customerAccountTitle" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="50sp"
    android:layout_marginTop="145sp"
    android:layout_marginEnd="3dp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/customerAccountName"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/accountName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50sp"
    android:layout_marginTop="175sp"
    android:layout_marginEnd="50sp"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="text" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="50sp"
    android:layout_marginTop="230sp"
    android:layout_marginEnd="3dp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/customerAccountAge"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/accountAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50sp"
    android:layout_marginTop="260sp"
    android:layout_marginEnd="50sp"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="number" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="50sp"
    android:layout_marginTop="315sp"
    android:layout_marginEnd="3dp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/customerAccountAddress"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/accountAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50sp"
    android:layout_marginTop="345sp"
    android:layout_marginEnd="50sp"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="text" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="50sp"
    android:layout_marginTop="385sp"
    android:layout_marginEnd="3dp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/customerAccountPass"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/accountPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50sp"
    android:layout_marginTop="415sp"
    android:layout_marginEnd="50sp"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="textPassword" />

  <Button
    android:id="@+id/enterDetails"
    style="@style/buttonStyle"
    android:layout_width="80sp"
    android:layout_height="30sp"
    android:layout_below="@id/accountPassword"
    android:layout_margin="20dp"
    android:text="@string/enter" />

</RelativeLayout>

