<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  android:orientation="vertical">

  <TextView
    style="@style/layoutTitle"
    android:text="@string/restockTitle" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="80sp"
    android:layout_marginTop="145sp"
    android:layout_marginEnd="3dp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/restockSelect"
    android:textColor="@color/colorPrimary"
    android:textSize="25sp" />

  <Spinner
    android:id="@+id/itemSpinner"
    android:layout_width="250sp"
    android:layout_height="60sp"
    android:layout_marginStart="80sp"
    android:layout_marginTop="180sp"
    android:background="@color/colorWhite"
    android:entries="@array/itemArray"
    android:textAlignment="center" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="80sp"
    android:layout_marginTop="280sp"
    android:layout_marginEnd="3dp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/restockQuantity"
    android:textColor="@color/colorPrimary"
    android:textSize="25sp" />

  <EditText
    android:id="@+id/quantityButton"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    android:layout_marginStart="80sp"
    android:layout_marginTop="320sp"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="number" />

  <Button
    android:id="@+id/enterButton"
    android:layout_width="80sp"
    android:layout_height="30sp"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="100sp"
    android:layout_marginTop="370sp"
    android:background="@color/colorAccent"
    android:radius="10sp"
    android:text="@string/enter"
    android:textAlignment="center"
    android:textColor="@color/colorWhite"
    android:textSize="15sp" />

</RelativeLayout>
