<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground">

  <TextView
    android:id="@+id/user_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@id/idUserText"
    android:layout_marginTop="150sp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/idText"
    android:textColor="@color/colorPrimary"
    android:textSize="25sp" />

  <EditText
    android:id="@+id/idUserText"
    android:layout_width="200sp"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_id"
    android:layout_centerHorizontal="true"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="number"
    android:labelFor="@+id/user_id" />

  <TextView
    android:id="@+id/pass_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/idPasswordText"
    android:layout_marginTop="250sp"
    android:background="@color/colorBackground"
    android:fontFamily="sans-serif-condensed-medium"
    android:text="@string/passText"
    android:textColor="@color/colorPrimary"
    android:textSize="25sp" />

  <EditText
    android:id="@+id/idPasswordText"
    android:layout_width="200sp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="285sp"
    android:background="@color/colorWhite"
    android:imeOptions="actionDone"
    android:inputType="textPassword"
    android:labelFor="@+id/pass_id" />

  <Button
    android:id="@+id/enterButton"
    style="@style/buttonStyle"
    android:layout_width="80sp"
    android:layout_height="30sp"
    android:background="@color/colorAccent"
    android:layout_below="@id/idPasswordText"
    android:layout_margin="20dp"
    android:text="@string/enter" />

</RelativeLayout>
