<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  android:orientation="vertical">

  <TextView
    android:id="@+id/customerAccountsTitle"
    style="@style/layoutTitle"
    android:text="@string/customerAccountsTitle" />

  <TextView
    android:id="@+id/accountListTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/customerAccountsTitle"
    android:padding="10dp"
    android:textSize="18sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/accountListTitle"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/activeAccounts"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>

      <ListView
        android:id="@+id/activeAccountList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/inactiveAccounts"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>

      <ListView
        android:id="@+id/inactiveAccountList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>


  </LinearLayout>


</RelativeLayout>